# seq_compression

./: CMakeLists.txt  Main.cpp  README.md  basic.cpp  basic.h  compressing.cpp  compressing.h  inputRef.cpp  inputRef.h  load_DBG_full.cpp  split.cpp  split.h  utils.cpp  utils.h
